--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,4 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
-top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+title: Pengfei Li's Homepage
+page-top-title: Pengfei Li
+top-section-bg-text: Intelligent Science and Technology 
+home-subtitle: Pengfei Li&ensp;|&ensp;李鹏飞
